--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^1.0.3
   sizer: ^2.0.15
-  permission_handler:
+  # permission_handler: any
   shared_preferences:
   flutter_native_splash: ^1.3.2
   dio: ^4.0.4
