--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_hooks: ^0.18.5+1
   sizer: ^2.0.15
   filesize: ^2.0.1
+  syncfusion_flutter_datepicker: ^20.3.52
   permission_handler: any
   shared_preferences:
   flutter_native_splash: ^1.3.2
