--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^1.0.3
-  hooks_riverpod: ^1.0.4
-  flutter_hooks: ^0.18.5+1
+  flutter_riverpod: 
+  hooks_riverpod: 
+  flutter_hooks: 
   sizer: ^2.0.15
   filesize: ^2.0.1
   syncfusion_flutter_datepicker: ^20.3.52
